force-app/main/default/objects/Expansion_Site__c/Expansion_Site__c.object-meta.xml
<CustomObject>
    <description>Candidate locations for new retail store openings. Stores site analysis, scoring, and financial projections generated by the Expansion Strategy Agent.</description>
    <label>Expansion Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expansion Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>