force-app/main/default/objects/Expansion_Site__c/fields/Agent_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Agent_Recommendation__c</fullName>
    <description>AI-generated recommendation from the Expansion Strategy Agent.</description>
    <label>Agent Recommendation</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>