force-app/main/default/objects/Expansion_Site__c/fields/Competition_Score__c.field-meta.xml
<CustomField>
    <fullName>Competition_Score__c</fullName>
    <description>Competition density score out of 100. Higher = more competitors.</description>
    <label>Competition Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>