force-app/main/default/objects/Expansion_Site__c/fields/Demand_Score__c.field-meta.xml
<CustomField>
    <fullName>Demand_Score__c</fullName>
    <description>Composite demand score out of 100 based on footfall, demographics, and spending power.</description>
    <label>Demand Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>