force-app/main/default/objects/Expansion_Site__c/fields/Estimated_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Monthly_Revenue__c</fullName>
    <label>Estimated Monthly Revenue (INR)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>