force-app/main/default/objects/Expansion_Site__c/fields/Estimated_Setup_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Setup_Cost__c</fullName>
    <label>Estimated Setup Cost (INR)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>