force-app/main/default/objects/Expansion_Site__c/fields/Footfall_Index__c.field-meta.xml
<CustomField>
    <fullName>Footfall_Index__c</fullName>
    <description>Estimated daily footfall in the micro-market area.</description>
    <label>Footfall Index</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>