force-app/main/default/objects/Expansion_Site__c/fields/Last_Scored_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Scored_Date__c</fullName>
    <label>Last Scored Date</label>
    <type>DateTime</type>
</CustomField>