force-app/main/default/objects/Expansion_Site__c/fields/Micro_Market__c.field-meta.xml
<CustomField>
    <fullName>Micro_Market__c</fullName>
    <description>Neighborhood or micro-market name (e.g., Marol Naka, Andheri East)</description>
    <label>Micro Market</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>