force-app/main/default/objects/Expansion_Site__c/fields/Overall_Site_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Site_Score__c</fullName>
    <description>Weighted composite: 60% demand + 40% inverse competition.</description>
    <formula>(Demand_Score__c * 0.6) + ((100 - Competition_Score__c) * 0.4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Site Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>