force-app/main/default/objects/Expansion_Site__c/fields/Payback_Period_Years__c.field-meta.xml
<CustomField>
    <fullName>Payback_Period_Years__c</fullName>
    <label>Payback Period (Years)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>