force-app/main/default/objects/Expansion_Site__c/fields/Population_Density__c.field-meta.xml
<CustomField>
    <fullName>Population_Density__c</fullName>
    <label>Population Density (per sq km)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>