force-app/main/default/objects/Expansion_Site__c/fields/Projected_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Projected_Annual_Revenue__c</fullName>
    <formula>Estimated_Monthly_Revenue__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Annual Revenue (INR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>