force-app/main/default/objects/Expansion_Site__c/fields/ROI_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ROI_Percentage__c</fullName>
    <formula>IF(Estimated_Setup_Cost__c &gt; 0, ((Estimated_Monthly_Revenue__c * 12) - Estimated_Setup_Cost__c) / Estimated_Setup_Cost__c * 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROI %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>