force-app/main/default/objects/Expansion_Site__c/fields/Site_Category__c.field-meta.xml
<CustomField>
    <fullName>Site_Category__c</fullName>
    <label>Site Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Street</fullName>
            </value>
            <value>
                <fullName>Mall</fullName>
            </value>
            <value>
                <fullName>Residential Hub</fullName>
            </value>
            <value>
                <fullName>Transit Corridor</fullName>
            </value>
            <value>
                <fullName>Commercial District</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>