force-app/main/default/objects/Expansion_Site__c/fields/Youth_Population_Pct__c.field-meta.xml
<CustomField>
    <fullName>Youth_Population_Pct__c</fullName>
    <description>Percentage of population aged 18-35 in the PIN code area.</description>
    <label>Youth Population %</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>